--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "action": "start",
-  "process": 16640,
+  "action": "connect",
+  "process": 3552,
   "path": "D:\\Program Files(x86)\\Luxflows\\LuxFlow1231\\LuxFlow\\LuxFlow.exe"
 }
 
