按钮空间修改

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "action": "connect",
-  "process": 14896,
-  "path": "D:\\Program Files(x86)\\Luxflows\\LuxFlow_v1.2.1.30301\\install\\LuxFlow.exe"
+  "action": "start",
+  "process": 26660,
+  "path": "D:\\Program Files(x86)\\Luxflows\\LuxFlow_v1.2.3.30323\\install\\LuxFlow.exe"
 }
 
